# ninvaders

./: Makefile.in  README.md  aliens.c  aliens.h  configure  configure.in  globals.c  globals.h  highscore.c  highscore.h  nInvaders.c  nInvaders.h  player.c  player.h  ufo.c  ufo.h  view.c  view.h
